--- a/config.linux-x64.json
+++ b/config.linux-x64.json
@@ -2,5 +2,8 @@
     "platforms": [
         "linux-x64"
     ],
-    "electronVersion": "1.2.0"
+    "electronVersion": "1.6.6",
+    "installable": [
+        "linux"
+    ]
 }
