--- a/factorio-headless.conf
+++ b/factorio-headless.conf
@@ -1,8 +1,7 @@
-# AUTOSAVE_INTERVAL and AUTOSAVE_SLOTS must now be declared in /etc/factorio/server-settings.json
-# LATENCY was removed from the game
+# All paths are relative to /var/lib/factorio/
 
-# Path to the save file
-SAVE_FILE=/var/lib/factorio/.factorio/saves/factorio-service-save.zip
+# Save file name (or path), without the .zip suffix
+SAVE_NAME=factorio-service-save
 
 # Additional factorio arguments, such as:
 #  -v [ --verbose ]                   enable verbose logging
@@ -11,4 +10,20 @@ SAVE_FILE=/var/lib/factorio/.factorio/saves/factorio-service-save.zip
 #  --bind ADDRESS[:PORT]              IP address (and optionally port) to bind to
 #  --rcon-port N                      Port to use for RCON
 #  --rcon-password PASSWORD           Password for RCON
-FACTORIO_EXTRA_ARGS=""
+#  --server-whitelist FILE            Path to file with server whitelist.
+#  --server-banlist FILE              Path to file with server banlist.
+#  --console-log FILE                 Path to file where a copy of the server's log will be stored
+#  --server-id FILE                   Path where server ID will be stored or read from
+#
+FACTORIO_EXTRA_ARGS="--server-banlist server-banlist.json --server-whitelist server-whitelist.json --console-log console.log"
+
+# Additional factorio arguments used when generating the map, such as:
+#   --map-gen-settings FILE               Map generation settings
+#   --map-gen-seed SEED                   Map generation seed (you can also set the seed in map-gen-settings.json)
+#   --map-settings FILE                   Map settings
+#   --preset arg                          Name of the map generation preset to be used:
+#                                         default, rich-resources, marathon, dangerous, death-world, rail-world
+
+FACTORIO_CREATE_ARGS="--map-gen-settings /etc/factorio/map-gen-settings.json --map-settings /etc/factorio/map-settings.json --preset default"
+
+# Keep in mind the save file will only be generated when starting the service and if it doesn't already exist
