--- a/factorio-headless.service
+++ b/factorio-headless.service
@@ -7,9 +7,9 @@ After=network.target
 User=factorio
 EnvironmentFile=/etc/conf.d/factorio
 WorkingDirectory=/var/lib/factorio
-TimeoutStartSec=5
-ExecStart=/usr/bin/factorio --server-settings /etc/factorio/server-settings.json --start-server ${SAVE_FILE} $FACTORIO_EXTRA_ARGS
-TimeoutStopSec=10
+ExecStartPre=/bin/bash -c "[[ -f '${SAVE_NAME}.zip' ]] || /usr/bin/factorio --create '${SAVE_NAME}.zip' $FACTORIO_CREATE_ARGS"
+ExecStart=/usr/bin/factorio --server-settings /etc/factorio/server-settings.json --start-server '${SAVE_NAME}.zip' $FACTORIO_EXTRA_ARGS
+TimeoutStopSec=30
 KillSignal=SIGINT
 RestartSec=10
 Restart=on-failure
