upgrade to new upstream version (2017.2)

--- a/substance-painter.desktop
+++ b/substance-painter.desktop
@@ -1,10 +1,9 @@
 [Desktop Entry]
-Version=2.2.0
-Name=Substance Painter 2
+Name=Substance Painter
 Exec=/usr/bin/substance-painter
 Icon=substance-painter-icon
 Terminal=false
 Type=Application
 StartupNotify=true
-Categories=Utility;Application;
+Categories=Graphics
 
