Remove build job limit and add glibc 2.26 fix

--- a/mozconfig.in
+++ b/mozconfig.in
@@ -27,8 +27,9 @@ export CXX=g++-5
 # Use python2
 mk_add_options PYTHON=/usr/bin/python2
 
-# use multiple job threads to speed up compilation
-mk_add_options MOZ_MAKE_FLAGS="-j4"
+# uncomment the following to limit the number of parallel build jobs
+# remember to run updpkgsums after, or you'll get a checksum failure
+#mk_add_options MOZ_MAKE_FLAGS="-j4"
 
 # disable junk
 ac_add_options --disable-codesighs
