--- a/firefox-esr.desktop
+++ b/firefox-esr.desktop
@@ -1,16 +1,16 @@
 [Desktop Entry]
 Name=Firefox ESR
 GenericName=Web Browser
-Comment=Browse the World Wide Web
+Icon=firefox-esr
+Type=Application
+Categories=Application;Network;
+MimeType=text/html;text/xml;application/xhtml+xml;application/vnd.mozilla.xul+xml;text/mml;x-scheme-handler/http;x-scheme-handler/https;
+Encoding=UTF-8
 Exec=firefox-esr %u
 Terminal=false
-Type=Application
-Icon=firefox-esr
-Categories=Network;WebBrowser;
-MimeType=text/html;text/xml;application/xhtml+xml;application/vnd.mozilla.xul+xml;text/mml;x-scheme-handler/http;x-scheme-handler/https;x-scheme-handler/ftp;
+MultipleArgs=false
 StartupNotify=false
 StartupWMClass=Firefox
-Actions=NewTab;NewWindow;NewPrivateWindow;
 
 [Desktop Action NewTab]
 Name=打开新标签页
