Fix dnsmasq and update to 2.17

--- a/dbus-dnsmasq-lxd.conf
+++ b/dbus-dnsmasq-lxd.conf
@@ -6,11 +6,11 @@
 
 <busconfig>
     <policy user="root">
-        <allow own="uk.org.thekelleys.dnsmasq-lxd"/>
-        <allow send_destination="uk.org.thekelleys.dnsmasq-lxd"/>
+        <allow own="uk.org.thekelleys.dnsmasq.lxd"/>
+        <allow send_destination="uk.org.thekelleys.dnsmasq.lxd"/>
     </policy>
     <policy context="default">
-        <deny own="uk.org.thekelleys.dnsmasq-lxd"/>
-        <deny send_destination="uk.org.thekelleys.dnsmasq-lxd"/>
+        <deny own="uk.org.thekelleys.dnsmasq.lxd"/>
+        <deny send_destination="uk.org.thekelleys.dnsmasq.lxd"/>
     </policy>
 </busconfig>
