--- a/dnsmasq@lxd.service
+++ b/dnsmasq@lxd.service
@@ -7,9 +7,9 @@ Documentation=man:dnsmasq(8)
 
 [Service]
 Type=dbus
-BusName=uk.org.thekelleys.dnsmasq-lxd
+BusName=uk.org.thekelleys.dnsmasq.lxd
 ExecStartPre=/usr/bin/dnsmasq --test -C /etc/dnsmasq-lxd.conf
-ExecStart=/usr/bin/dnsmasq -k -C /etc/dnsmasq-lxd.conf --user=dnsmasq --pid-file
+ExecStart=/usr/bin/dnsmasq -k -C /etc/dnsmasq-lxd.conf --user=dnsmasq --enable-dbus=uk.org.thekelleys.dnsmasq.lxd --pid-file
 ExecReload=/bin/kill -HUP $MAINPID
 
 [Install]
