--- a/PKGBUILD.in
+++ b/PKGBUILD.in
@@ -14,12 +14,12 @@ pkgver=HTS_VERSION
 _gitver=GIT_VERSION
 pkgrel=1
 pkgdesc='Tvheadend HTSP PVR client addon for Kodi'
-arch=('i686' 'x86_64' 'armv6h' 'armv7h')
+arch=('i686' 'x86_64' 'armv6h' 'armv7h' 'aarch64')
 url="https://github.com/kodi-pvr/$_gitname"
 license=('GPL')
 groups=('kodi-addons')
 makedepends=('cmake' 'kodi-platform' 'git' 'kodi-dev')
-depends=('kodi')
+depends=('kodi' 'p8-platform')
 source=("git+https://github.com/kodi-pvr/${_gitname}.git#${_gitver}")
 md5sums=('SKIP')
 
