--- a/XMind.ini
+++ b/XMind.ini
@@ -5,7 +5,7 @@
 -startup
 /usr/share/xmind/plugins/org.eclipse.equinox.launcher_1.3.200.v20160318-1642.jar
 --launcher.library
-/usr/share/xmind/plugins/org.eclipse.equinox.launcher.gtk.linux.x86_64_1.1.400.v20160518-1444
+/usr/share/xmind/plugins/org.eclipse.equinox.launcher.gtk.linux.CARCH_1.1.400.v20160518-1444
 --launcher.defaultAction
 openFile
 --launcher.GTK_version
