Update to 62.0.3198.0 - Now vaapi patch for everyone! (see the install/upgrade note)

--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,5 @@
 !chromium-dev.svg
 !chromium-widevine-r1.patch
 !minizip.patch
-!vaapi_patch-r3.patch
-!chromium-blink-gcc7-r1.patch
+!chromium-intel-vaapi_r2.patch
+!chromium-blink-gcc7-r2.patch
