--- a/opennebula-oneflow.service
+++ b/opennebula-oneflow.service
@@ -8,10 +8,11 @@ User=oneadmin
 Group=cloud
 Type=simple
 
+
 ExecStart=/usr/bin/ruby /usr/lib/one/oneflow/oneflow-server.rb
 ExecStop=/bin/kill -TERM $MAINPID
 PIDFile=/var/run/one/oneflow.pid
-Restart=on-abnormal
+Restart=always
 
 [Install]
 WantedBy=multi-user.target
