--- a/opennebula-onegate.service
+++ b/opennebula-onegate.service
@@ -11,7 +11,7 @@ Type=simple
 ExecStart=/usr/bin/ruby /usr/lib/one/onegate/onegate-server.rb
 ExecStop=/bin/kill -TERM $MAINPID
 PIDFile=/var/run/one/onegate.pid
-Restart=on-abnormal
+Restart=always
 
 [Install]
 WantedBy=multi-user.target
