--- a/opennebula-scheduler.service
+++ b/opennebula-scheduler.service
@@ -11,7 +11,7 @@ Type=simple
 ExecStart=/usr/bin/mm_sched
 ExecStop=/bin/kill -TERM $MAINPID
 PIDFile=/var/run/one/sched.pid
-Restart=on-abnormal
+Restart=always
 
 [Install]
 WantedBy=multi-user.target
