--- a/substance-designer.desktop
+++ b/substance-designer.desktop
@@ -1,9 +1,12 @@
 [Desktop Entry]
 Name=Substance Designer
+GenericName=Material Authoring Software
+Description=PBR material design and authoring tool
 Exec=/usr/bin/substance-designer
 Icon=substance-designer-icon
+Version=2017.1.3
 Terminal=false
 Type=Application
 StartupNotify=true
-Categories=Graphics
-
+Categories=Utility;Graphics
+MimeType=application/x.allegorithmic.package+xml;application/x.allegorithmic.substance
