--- a/logging.properties
+++ b/logging.properties
@@ -1,8 +1,7 @@
 java.util.logging.FileHandler.pattern = /var/log/nxt/nxt.log
 
-# Default logging level (OFF, FINE, INFO, WARNING, SEVERE)
-.level = SEVERE
+# Logging level (OFF, FINE, INFO, WARNING, SEVERE)
+java.util.logging.FileHandler.level = OFF
+java.util.logging.ConsoleHandler.level = INFO
 
-# Nxt logging level (OFF, FINE, INFO, WARNING, SEVERE)
-nxt.level = WARNING
-nxt.http.APIProxyServlet.level = INFO
+#Other settings look and copy from the file /usr/share/java/nxt/conf/logging-default.properties
