--- a/nxt.properties
+++ b/nxt.properties
@@ -1,6 +1,15 @@
+# Set the socks proxy
+#socksProxyHost=127.0.0.1
+#socksProxyPort=9050
+#nxt.shareMyAddress=false
+
 nxt.dbDir=/var/lib/nxt/nxt_db/nxt
 nxt.testDbDir=/var/lib/nxt/nxt_test_db/nxt
+
+nxt.debugTraceLog=/var/log/nxt/nxt-trace.csv
 
 nxt.apiResourceBase=/usr/share/nxt/html/www
 nxt.javadocResourceBase=/usr/share/nxt/html/doc
 nxt.uiResourceBase=/usr/share/nxt/html/nrs
+
+#Other settings look and copy from the file /usr/share/java/nxt/conf/nxt-default.properties
