--- a/monerod.service
+++ b/monerod.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Monero Full Node
+Description=Monero Daemon
 After=network.target
 
 [Service]
@@ -8,15 +8,17 @@ Group=monero
 WorkingDirectory=~
 
 Type=forking
-ExecStart=/usr/bin/monerod --config-file /etc/monerod.conf --detach
+ExecStart=/usr/bin/monerod --config-file /etc/monerod.conf --pidfile /var/lib/monero/monerod.pid --detach
 
-# This is necessary because monerod does not yet support
-# writing a PID file, which means systemd tries to guess the PID
-# by default, but it guesses wrong (sometimes, depending on
-# random timing of events), because the daemon forks twice.
-# The ultimate fix is for the daemon to write a PID file, and
-# a workaround is to disable the guessing feature in systemd.
-GuessMainPID=no
+# NOTE: if systemd complains with "monerod.service: Failed to read PID from file /var/lib/monero/monerod.pid: Invalid argument"
+# From https://www.freedesktop.org/software/systemd/man/systemd.service.html
+#  "In case more than one process remains, systemd will be unable to determine the main process, so it will not assume there is one.
+#   In that case, $MAINPID will not expand to anything.
+#   However, if the process decides to write a traditional PID file, systemd will be able to read the main PID from there.
+#   Please set PIDFile= accordingly.
+#   Note that the daemon should write that file before finishing with its initialization.
+#   Otherwise, systemd might try to read the file before it exists."
+PIDFile=/var/lib/monero/monerod.pid
 
 [Install]
 WantedBy=multi-user.target
