update to 1.0.17; add comments to .conf; fix bitcoin service dependency in .service

--- a/electrumx.conf
+++ b/electrumx.conf
@@ -4,26 +4,32 @@
 #REQUIRED
 #
 
+    #The folder to store the electrumx database
     DB_DIRECTORY = /srv/electrumx
+
+    #The linux user to run the server under
     USERNAME = electrumx
+
+    #The path to the electrumx binary
     ELECTRUMX = /usr/bin/electrumx-server
 
     #Bitcoin Node RPC Credentials
     #assumes https://aur.archlinux.org/packages/bitcoin-core/bitcoin.conf
+    #port is optional, defaults to COIN RPC default
     DAEMON_URL = http://bitcoin:secret@127.0.0.1:8332/
-        #port is optional, defaults to COIN RPC default
 
 #
 #REQUIRED FOR PUBLIC VISIBILITY
 #
 
+    #listen on interface and ports (0.0.0.0 is any)
     HOST = 127.0.0.1
-        #listen on interface, (0.0.0.0 is any)
     TCP_PORT = 50001
     SSL_PORT = 50002
-        #Requires
-        SSL_CERTFILE = /etc/electrumx/server.cert
-        SSL_KEYFILE = /etc/electrumx/server.pem
+
+    #path to ssl cert and key for enabling ssl support
+    SSL_CERTFILE = /etc/electrumx/server.cert
+    SSL_KEYFILE = /etc/electrumx/server.pem
 
 #
 #OPTIONAL VISIBILITY
@@ -31,31 +37,28 @@
 
     #BANNER_FILE = /path/to/banner
     #DONATION_ADDRESS =
-    #IRC = yes
-    #IRC_NICK =
     #REPORT_HOST = $HOST
     #REPORT_TCP_PORT =  #defaults to TCP_PORT
     #REPORT_SSL_PORT =  #defaults to SSL_PORT
-    RPC_PORT = 8000
-
+    #RPC_PORT = 8000
 
 #
 #MISC
 #
+    #lib/coins.py
     COIN = Bitcoin
-        #lib/coins.py
-    NET = mainnet
-        #lib/coins.py
+    NET = bitcoin-segwit
+
+    #leveldb or rocksdb (You'll need to install appropriate python packages)
     DB_ENGINE = leveldb
-        #leveldb, rocksdb (You'll need to install appropriate python packages)
 
+    #maximum number of blocks to be able to handle in a chain
+    #reorganisation.  ElectrumX retains some fairly compact
+    #undo information for this many blocks in levelDB.
     #REORG_LIMIT = 200
-        #maximum number of blocks to be able to handle in a chain
-        #reorganisation.  ElectrumX retains some fairly compact
-        #undo information for this many blocks in levelDB.
 
+    #Set to anything non-empty to remove IP addresses from logs.
     ANON_LOGS = yes
-         #Set to anything non-empty to remove IP addresses from logs.
 
 
 #These following environment variables are to help limit server
@@ -64,7 +67,7 @@
 #each and are processed efficiently.  I feel the defaults are low and
 #encourage you to raise them.
 
+    #Maximum number of address subscriptions across all sessions
     MAX_SUBS = 250000
-        #Maximum number of address subscriptions across all sessions
+    #Maximum number of address subscriptions permitted to a single session.
     MAX_SESSION_SUBS = 50000
-        #Maximum number of address subscriptions permitted to a single session.
