--- a/iortcw-sp-rend2.desktop
+++ b/iortcw-sp-rend2.desktop
@@ -2,7 +2,7 @@
 [Desktop Entry]
 Version=1.0
 Type=Application
-Name=Return To Castle Wolfenstein SP Rend2
+Name=ioRTCW SP Rend2
 Comment=Return To Castle Wolfenstein with Rend2 (Single Player)
 Exec=/usr/bin/iortcw-sp-rend2
 Icon=/usr/share/pixmaps/iortcw.png
