Update to version 2.6
The version of python-django-rest-framework is lower than requested
by upstream. However, the rest framework package is not up to date
and on my installation everyting works also with the currently
available version. This, lets give it a shot.

--- a/paperless.conf
+++ b/paperless.conf
@@ -1,10 +1,8 @@
-# paperless.conf
-# Set at least the values for
-#   PAPERLESS_CONSUMPTION_DIR
-#   PAPERLESS_OCR_LANGUAGE
-# If you want to run the default django-webserver comming with paperless on a
-# public network, also set
-#   PAPERLESS_ALLOWED_HOSTS
+# Sample paperless.conf
+# Copy this file to /etc/paperless.conf and modify it to suit your needs.
+# As this file contains passwords it should only be readable by the user
+# running paperless.
+
 
 ###############################################################################
 ####                         Paths & Folders                               ####
@@ -60,6 +58,11 @@ PAPERLESS_EMAIL_SECRET=""
 ###############################################################################
 ####                              Security                                 ####
 ###############################################################################
+
+# Controls whether django's debug mode is enabled. Disable this on production
+# systems. Debug mode is enabled by default.
+PAPERLESS_DEBUG="false"
+
 
 # Paperless can be instructed to attempt to encrypt your PDF files with GPG
 # using the PAPERLESS_PASSPHRASE specified below.  If however you're not
@@ -119,6 +122,18 @@ PAPERLESS_EMAIL_SECRET=""
 # http://paperless.readthedocs.org/en/latest/consumption.html#hooking-into-the-consumption-process
 #PAPERLESS_POST_CONSUME_SCRIPT="/path/to/an/arbitrary/script.sh"
 
+# By default, when clicking on a document within the web interface, the
+# browser will prompt the user to save the document to disk. By setting this to
+# "true", the document will instead be opened in the browser, if possible.
+#PAPERLESS_INLINE_DOC="false"
+
+# By default, paperless will check the document text for document date information.
+# Uncomment the line below to enable checking the document filename for date
+# information. The date order can be set to any option as specified in
+# https://dateparser.readthedocs.io/en/latest/#settings. The filename will be
+# checked first, and if nothing is found, the document text will be checked
+# as normal.
+#PAPERLESS_FILENAME_DATE_ORDER="YMD"
 
 #
 # The following values use sensible defaults for modern systems, but if you're
@@ -181,6 +196,12 @@ PAPERLESS_EMAIL_SECRET=""
 #PAPERLESS_CONSUMER_LOOP_TIME=10
 
 
+# By default Paperless stops consuming a document if no language can be
+# detected. Set to true to consume documents even if the language detection
+# fails.
+#PAPERLESS_FORGIVING_OCR="false"
+
+
 ###############################################################################
 ####                            Interface                                  ####
 ###############################################################################
@@ -201,3 +222,28 @@ PAPERLESS_EMAIL_SECRET=""
 # positive integer, but if you don't define one in paperless.conf, a default of
 # 100 will be used.
 #PAPERLESS_LIST_PER_PAGE=100
+
+
+# The number of years for which a correspondent will be included in the recent
+# correspondents filter.
+#PAPERLESS_RECENT_CORRESPONDENT_YEARS=1
+
+###############################################################################
+####                     Third-Party Binaries                              ####
+###############################################################################
+
+# There are a few external software packages that Paperless expects to find on
+# your system when it starts up.  Unless you've done something creative with
+# their installation, you probably won't need to edit any of these.  However,
+# if you've installed these programs somewhere where simply typing the name of
+# the program doesn't automatically execute it (ie. the program isn't in your
+# $PATH), then you'll need to specify the literal path for that program here.
+
+# Convert (part of the ImageMagick suite)
+#PAPERLESS_CONVERT_BINARY=/usr/bin/convert
+
+# Unpaper
+#PAPERLESS_UNPAPER_BINARY=/usr/bin/unpaper
+
+# Optipng (for optimising thumbnail sizes)
+#PAPERLESS_OPTIPNG_BINARY=/usr/bin/optipng
