service: fix pipe management

--- a/wesnothd-1.8.service
+++ b/wesnothd-1.8.service
@@ -9,18 +9,21 @@ Conflicts=wesnothd.service wesnothd-1.0.service wesnothd-1.2.service wesnothd-1.
 [Service]
 # If wesnothd is started from within the game it runs under a different user.
 # Deleting the pipe resets owner, group and mode.
-ExecStopPre=/bin/rm -f /run/wesnothd-1.8/socket
+ExecStartPre=/bin/rm -f /run/wesnothd-1.8/socket
 
 ExecStart=/usr/bin/wesnothd-1.8 -t 2 -T 5
 # You can use -c to specify a same configuration file
 # (and make sure wesnothd has the required access permissions).
 
-SyslogIdentifier=Wesnothd-1.8
-User=nobody
-Group=users
-
 # Remove remaining administration pipe:
 ExecStopPost=/bin/rm -f /run/wesnothd-1.8/socket
+
+SyslogIdentifier=Wesnothd-1.6
+# Apply security settings only to ExecStart, so the Pre & Post steps run as root
+PermissionsStartOnly=yes
+WorkingDirectory=/run/wesnothd-1.6
+User=nobody
+Group=users
 
 # Additional security-related features:
 PrivateTmp=yes
