Do not rename the source clone. Rename icon. Switch zlib to p7zip.
Upstream now uses only 7za binary for compressed files support[1].

[1] https://github.com/m64p/mupen64plus-gui/commit/3bf730a473bef77f7b6c64586a1fc2eb064243eb

--- a/mupen64plus-gui.desktop
+++ b/mupen64plus-gui.desktop
@@ -5,7 +5,7 @@ Name=mupen64plus-gui
 Comment=Graphical User Interface for Mupen64Plus
 Path=/usr/bin
 Exec=mupen64plus-gui
-Icon=mupen64plus
+Icon=mupen64plus-gui
 Terminal=false
 StartupNotify=false
 Categories=Game;
