--- a/inav-configurator.desktop
+++ b/inav-configurator.desktop
@@ -5,3 +5,4 @@ Exec=/opt/inav/inav-configurator/inav-configurator
 Icon=/opt/inav/inav-configurator/icon/inav_icon_128.png
 Terminal=false
 Type=Application
+Categories=Utility
