--- a/miniflux.service
+++ b/miniflux.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=Miniflux Feed Reader
-After=network.target
-After=postgresql.service
+Requires=network-online.target postgresql.service
+After=network-online.target postgresql.service
 
 [Service]
 Type=simple
