--- a/qtwebflix.desktop
+++ b/qtwebflix.desktop
@@ -4,7 +4,7 @@ GenericName=QtWebFlix
 Comment=Standalone player for several streaming platforms
 Categories=Network;AudioVideo;Player;
 Exec=/usr/bin/qtwebflix --disable-seccomp-filter-sandbox --register-pepper-plugins="/usr/lib/qt/plugins/ppapi/libwidevinecdmadapter.so; application/x-ppapi-widevine-cdm"
-Icon=netflix-desktop.svg
+Icon=qtwebflix.svg
 StartupNotify=false
 Terminal=false
 Type=Application
