Fixes for new packaging + MimeTypes

--- a/github-desktop.desktop
+++ b/github-desktop.desktop
@@ -8,3 +8,4 @@ Terminal=false
 Type=Application
 Icon=github-desktop
 Categories=Development;
+MimeType=x-scheme-handler/x-github-client;x-scheme-handler/x-github-desktop-auth;
