--- a/rbldnsd.service
+++ b/rbldnsd.service
@@ -3,6 +3,7 @@ Description=rbldnsd.service
 After=network.target
 
 [Service]
+Type=forking
 ExecStart=/usr/bin/rbldnsd
 PIDFile=/run/rbldnsd.pid
 Restart=on-abort
