--- a/modelio.desktop
+++ b/modelio.desktop
@@ -1,8 +1,8 @@
 [Desktop Entry]
 Name=Modelio
-Version=3.6.1
+Version=3.8.0
 Comment=The opensource modeling environment
-Exec=/opt/modelio/modelio %u
+Exec=/opt/modelio/modelio.sh %u
 Icon=/opt/modelio/icon.xpm
 Type=Application
 Categories=Development;UML;
