--- a/bgbillingclient{_versuf}.desktop
+++ b/bgbillingclient{_versuf}.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Encoding=UTF-8
 Name=BGBilling ${_vermajor}
-Comment=BGBilling Client ${pkgver}
+Comment=BGBilling Client Runner ${pkgver}
 Exec=bgbilling${_versuf}.sh
 Icon=bgbillingclient${_versuf}.png
 Type=Application
