--- a/azuredatastudio.desktop
+++ b/azuredatastudio.desktop
@@ -2,8 +2,8 @@
 Name=Azure Data Studio
 Comment=Data Management Tool that enables you to work with SQL Server, Azure SQL DB and SQL DW from Windows, macOS and Linux.
 GenericName=Text Editor
-Exec=/usr/bin/{pkgname} --unity-launch %F
-Icon=/usr/share/{pkgname}/resources/app/resources/linux/code.png
+Exec=/usr/bin/@@pkgname@@ --unity-launch %F
+Icon=@@pkgname@@
 Type=Application
 StartupNotify=true
 StartupWMClass=azuredatastudio
@@ -14,5 +14,5 @@ Keywords=sqlops;
 
 [Desktop Action new-empty-window]
 Name=New Empty Window
-Exec=/usr/bin/{pkgname} --new-window %F
-Icon=/usr/share/{pkgname}/resources/app/resources/linux/code.png
+Exec=/usr/bin/@@pkgname@@ --new-window %F
+Icon=@@pkgname@@
